--- a/css/style.css
+++ b/css/style.css
@@ -66,7 +66,9 @@ h2{
     animation: imgAnim 1s linear infinite alternate;
     animation-delay: calc(0.5s*var(--i));
 }
-
+.mp3{
+    margin-bottom: 10px;
+}
 
 @keyframes imgAnim {
     100%{
